Avoid stretched images if image doesn't exactly fit

--- a/src/swiffy-slider.css
+++ b/src/swiffy-slider.css
@@ -70,8 +70,8 @@
     /*The slides*/
     scroll-snap-align: var(--swiffy-slider-snap-align);
     position: relative;
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .slider-item-helper .slider-container>* {
